fixing some wrong margins

--- a/src/css/dessert-list.css
+++ b/src/css/dessert-list.css
@@ -30,10 +30,7 @@
     text-align: center;
     color: var(--color-scheme-1-text);
 
-    margin-bottom: 40px;
-
     @media screen and (min-width: 768px) and (max-width: 1439px) {
-      margin-bottom: 0;
       max-width: 432px;
       text-align: start;
     }
@@ -51,16 +48,20 @@
 }
 
 .dessert-tablet__wrapper {
+  margin-bottom: 40px;
+
   @media screen and (min-width: 768px) and (max-width: 1439px) {
     display: flex;
     align-items: flex-end;
     gap: 16px;
-    margin-bottom: 40px;
   }
 }
 
 .dessert-tablet-title-left-section {
+  margin-bottom: 40px;
+
   @media screen and (min-width: 768px) and (max-width: 1439px) {
+    margin-bottom: 0;
     width: 432px;
   }
 }
@@ -70,7 +71,6 @@
     flex-wrap: wrap;
     flex-direction: row;
     gap: 32px 24px;
-    margin-bottom: 40px;
   }
 }
 
@@ -115,11 +115,6 @@
 
 .category-dropdown {
   position: relative;
-  margin-bottom: 40px;
-
-  @media screen and (min-width: 768px) {
-    margin-bottom: 0;
-  }
 }
 
 .category-dropdown__btn {
